Feat: Ajout de la validation et les messages d'erreur

--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -353,6 +353,13 @@ footer {
   /*padding-right: 2vw;*/
   margin: 0 20px;
 }
+
+.errorMessage{
+  font-size: 13px;
+  font-family: var(--font-default);
+  color:#f00
+}
+
 @media screen and (max-width: 800px) {
   .hero-section {
     display: block;
