--- a/starterOnly/css/modal.css
+++ b/starterOnly/css/modal.css
@@ -359,6 +359,26 @@ footer {
   font-family: var(--font-default);
   color:#f00
 }
+.confirmation-Message{
+  padding: 40px;
+  display: none;
+  min-height: 770px;
+}
+.confirmation-Message h1{
+  justify-content: center;
+  align-items:  center;
+  text-align: center;
+  margin-top:55%;
+  font-weight: normal;
+}
+.confirmation-btn{
+  position: absolute;
+  bottom: 18px;
+  justify-content: center;
+  align-items:  center;
+  text-align: center;
+  margin-left: 32%;
+}
 
 @media screen and (max-width: 800px) {
   .hero-section {
